cargo-features = ["profile-overrides"]

[workspace]

members = [
    "cargo-casperlabs",
    "contract-ffi",
    "contracts/[!.]*/*",
    "engine-core",
    "engine-grpc-server",
    "engine-metrics-scraper",
    "engine-shared",
    "engine-storage",
    "engine-tests",
    "engine-wasm-prep",
]
exclude = [
    "contracts/examples/README.md",
]

default-members = [
    "cargo-casperlabs",
    "contract-ffi",
    "engine-core",
    "engine-grpc-server",
    "engine-metrics-scraper",
    "engine-shared",
    "engine-storage",
    "engine-tests",
    "engine-wasm-prep",
]

# Include debug symbols in the release build of `casperlabs-engine-tests` so that `simple-transfer` will yield useful
# perf data.
[profile.release.overrides.casperlabs-engine-tests]
debug = true
