[package]
name = "cargo-casperlabs"
version = "0.1.0"
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2018"
description = "Command line tool for creating a Wasm smart contract and tests for use on the CasperLabs network."
readme = "README.md"
documentation = "https://docs.rs/cargo-casperlabs"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/CasperLabs/tree/master/execution-engine/cargo-casperlabs"

[dependencies]
clap = "2"
colour = "0.3.0"
lazy_static = "1"

[dev-dependencies]
toml = "0.5.5"
