[package]
name = "casperlabs-engine-grpc-server"
version = "0.3.0"
authors = ["Mateusz Górski <gorski.mateusz@protonmail.ch>"]
description = "WASM execution engine for CasperLabs smart contracts"
license = "Apache-2.0"

[dependencies]
protobuf = "2"
grpc = "0.6.1"
futures = "0.1.8"
futures-cpupool = "0.1.8"
execution-engine = { path = "../engine" }
clap = "2.32.0"
shared = { path = "../shared" }
storage = { path = "../storage" }
wasm-prep = { path = "../wasm-prep" }
common = { path = "../common", package = "casperlabs-contract-ffi" }
wabt = "0.7.4"
dirs = "1.0.5"
lmdb = "0.8.0"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[[bin]]
name = "casperlabs-engine-grpc-server"
path = "src/main.rs"
[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
casperlabs-engine-grpc-server = { path = "/usr/bin/casperlabs-engine-grpc-server" }
