[package]
name = "casperlabs-engine-grpc-server"
version = "0.3.0"
authors = ["Mateusz Górski <gorski.mateusz@protonmail.ch>"]
description = "WASM execution engine for CasperLabs smart contracts"
license = "Apache-2.0"

[dependencies]
clap = "2.32.0"
common = { path = "../common", package = "casperlabs-contract-ffi" }
dirs = "1.0.5"
execution-engine = { path = "../engine" }
futures = "0.1.8"
futures-cpupool = "0.1.8"
grpc = "0.6.1"
lazy_static = "1.3.0"
lmdb = "0.8.0"
protobuf = "2"
shared = { path = "../shared" }
storage = { path = "../storage" }
wabt = "0.7.4"
wasm-prep = { path = "../wasm-prep" }

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[[bin]]
name = "casperlabs-engine-grpc-server"
path = "src/main.rs"
[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
casperlabs-engine-grpc-server = { path = "/usr/bin/casperlabs-engine-grpc-server" }
