[package]
name = "casperlabs-contract-ffi"
version = "0.5.0"
authors = ["Michael Birch <birchmd@casperlabs.io>", "Mateusz Górski <gorski.mateusz@protonmail.ch>"]
edition = "2018"
description = "Library for developing CasperLabs smart contracts."
license = "Apache-2.0"

[features]
default = []
std = ["proptest/std"]
gens = ["std", "proptest/std"]

[dependencies]
failure = { version = "0.1.5", default-features = false, features = ["failure_derive"] }
num = { version = "0.2.0", default-features = false }
wee_alloc = "0.4.3"
uint = { version = "0.6.1", default-features = false, features = [] }
proptest = { version = "0.9.2", default-features = false, optional = true }

[dev-dependencies]
proptest = { version = "0.9.2", default-features = false }
siphasher = "0.3.0"
