[package]
name = "casperlabs-contract-ffi"
version = "0.22.0"
authors = ["Michael Birch <birchmd@casperlabs.io>", "Mateusz Górski <gorski.mateusz@protonmail.ch>"]
edition = "2018"
description = "Library for developing CasperLabs smart contracts."
license = "Apache-2.0"

[features]
default = ["base16/alloc"]
std = ["base16/std"]
gens = ["std", "proptest/std"]

[dependencies]
base16 = { version = "0.2.1", default-features = false }
bitflags = "1"
blake2 = { version = "0.8.1", default-features = false }
failure = { version = "0.1.6", default-features = false, features = ["failure_derive"] }
hex_fmt = "0.3.0"
num-derive = { version = "0.3.0", default-features = false }
num-traits = { version = "0.2.10", default-features = false }
proptest = { version = "0.9.4", default-features = false, optional = true }
uint = { version = "0.8.2", default-features = false, features = [] }
wee_alloc = "0.4.5"

[dev-dependencies]
proptest = { version = "0.9.4", default-features = false }
siphasher = "0.3.1"
