[package]
name = "casperlabs-contract"
version = "0.22.0"
authors = ["Michael Birch <birchmd@casperlabs.io>", "Mateusz Górski <gorski.mateusz@protonmail.ch>"]
edition = "2018"
description = "Library for developing CasperLabs smart contracts."
readme = "README.md"

[features]
default = []
std = ["casperlabs-types/std"]

[dependencies]
casperlabs-types = { path = "../types" }
failure = { version = "0.1.6", default-features = false, features = ["failure_derive"] }
hex_fmt = "0.3.0"
wee_alloc = "0.4.5"
