[package]
name = "casperlabs-contract"
version = "0.4.0" # when updating, also update 'html_root_url' in lib.rs
authors = ["Michael Birch <birchmd@casperlabs.io>", "Mateusz Górski <gorski.mateusz@protonmail.ch>"]
edition = "2018"
description = "Library for developing CasperLabs smart contracts."
readme = "README.md"
documentation = "https://docs.rs/casperlabs-contract"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/CasperLabs/tree/master/execution-engine/contract"
license-file = "../../LICENSE"

[features]
default = []
std = ["casperlabs-types/std"]
test-support = []

[dependencies]
casperlabs-types = { version = "0.4.0", path = "../types" }
failure = { version = "0.1.6", default-features = false, features = ["failure_derive"] }
hex_fmt = "0.3.0"
wee_alloc = "0.4.5"

[dev-dependencies]
version-sync = "0.8"
