[package]
name = "casperlabs-engine-core"
version = "0.1.0"
authors = ["Michael Birch <birchmd@casperlabs.io>", "Mateusz Górski <gorski.mateusz@protonmail.ch>"]
edition = "2018"

[dependencies]
base16 = "0.2.1"
blake2 = "0.8.1"
contract = { path = "../contract",  package = "casperlabs-contract", features = ["std", "gens"] }
engine-shared = { path = "../engine-shared", package = "casperlabs-engine-shared" }
engine-storage = { path = "../engine-storage", package = "casperlabs-engine-storage" }
engine-wasm-prep = { path = "../engine-wasm-prep", package = "casperlabs-engine-wasm-prep" }
failure = "0.1.6"
hex_fmt = "0.3.0"
itertools = "0.8.2"
linked-hash-map = "0.5.2"
num-derive = "0.3.0"
num-traits = "0.2.10"
parity-wasm = "0.31.3"
pwasm-utils = "0.6.2"
rand = "0.7.2"
rand_chacha = "0.2.1"
wasmi = "0.4.2"

[dev-dependencies]
lazy_static = "1"
matches = "0.1.8"
proptest = "0.9.4"
wabt = "0.9.2"
