[package]
name = "casperlabs-engine-grpc-server"
version = "0.11.0"
authors = ["Mateusz Górski <gorski.mateusz@protonmail.ch>"]
description = "WASM execution engine for CasperLabs smart contracts"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = "2"
contract-ffi = { path = "../contract-ffi", package = "casperlabs-contract-ffi" }
ctrlc = "3"
dirs = "2"
engine-core = { path = "../engine-core", package = "casperlabs-engine-core" }
engine-shared = { path = "../engine-shared", package = "casperlabs-engine-shared" }
engine-storage = { path = "../engine-storage", package = "casperlabs-engine-storage" }
engine-wasm-prep = { path = "../engine-wasm-prep", package = "casperlabs-engine-wasm-prep" }
grpc = "0.6.1"
lazy_static = "1"
lmdb = "0.8"
proptest = "0.9.4"
protobuf = "=2.8"
wabt = "0.9"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[dev-dependencies]
parity-wasm = "0.31.3"
rand = "0.7.2"

[[bin]]
name = "casperlabs-engine-grpc-server"
path = "src/main.rs"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
casperlabs-engine-grpc-server = { path = "/usr/bin/casperlabs-engine-grpc-server" }
