[package]
name = "casperlabs-engine-grpc-server"
version = "0.11.0"
authors = ["Mateusz Górski <gorski.mateusz@protonmail.ch>"]
edition = "2018"
description = "Wasm execution engine for CasperLabs smart contracts."
readme = "README.md"
documentation = "https://docs.rs/casperlabs-engine-grpc-server"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/CasperLabs/tree/master/execution-engine/engine-grpc-server"
# this is required by 'cargo rpm'
license-file = "../../LICENSE"

[dependencies]
clap = "2"
ctrlc = "3"
dirs = "2"
engine-core = { version = "0.1.0", path = "../engine-core", package = "casperlabs-engine-core" }
engine-shared = { version = "0.2.0", path = "../engine-shared", package = "casperlabs-engine-shared" }
engine-storage = { version = "0.1.0", path = "../engine-storage", package = "casperlabs-engine-storage" }
engine-wasm-prep = { version = "0.1.0", path = "../engine-wasm-prep", package = "casperlabs-engine-wasm-prep" }
grpc = "0.6.1"
lazy_static = "1"
lmdb = "0.8"
proptest = "0.9.4"
protobuf = "=2.8"
types = { version = "0.1.0", path = "../types", package = "casperlabs-types", features = ["std", "gens"] }
wabt = "0.9"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[dev-dependencies]
parity-wasm = "0.31.3"
rand = "0.7.2"

[[bin]]
name = "casperlabs-engine-grpc-server"
path = "src/main.rs"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
casperlabs-engine-grpc-server = { path = "/usr/bin/casperlabs-engine-grpc-server" }

[package.metadata.rpm.files]
"../packaging/casperlabs-engine-grpc-server.service" = { path = "/lib/systemd/system/casperlabs-engine-grpc-server.service" }

[package.metadata.deb]
maintainer-scripts="debian"
assets = [
	["packaging/casperlabs-engine-grpc-server.service", "/lib/systemd/system/casperlabs-engine-grpc-server.service", "644"],
	["../target/release/casperlabs-engine-grpc-server", "/usr/bin/casperlabs-engine-grpc-server", "755"]
]
