[package]
name = "casperlabs-engine-shared"
version = "0.2.0"
authors = ["Henry Till <henrytill@gmail.com>", "Ed Hastings <ed@casperlabs.io>"]
edition = "2018"
description = "Library of shared types for use by the various CasperLabs execution engine crates."
readme = "README.md"
documentation = "https://docs.rs/casperlabs-engine-shared"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/CasperLabs/tree/master/execution-engine/engine-shared"

[dependencies]
base16 = "0.2.1"
blake2 = "0.8.1"
chrono = "0.4.10"
engine-wasm-prep = { version = "0.1.0", path = "../engine-wasm-prep", package = "casperlabs-engine-wasm-prep" }
hostname = "0.3.0"
lazy_static = "1"
libc = "0.2.66"
log = "0.4.8"
num = { version = "0.2.0", default-features = false }
parity-wasm = "0.31.3"
proptest = "0.9.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
types = { version = "0.1.0", path = "../types", package = "casperlabs-types", features = ["std", "gens"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
