[package]
name = "casperlabs-engine-shared"
version = "0.5.1"
authors = ["Henry Till <henrytill@gmail.com>", "Ed Hastings <ed@casperlabs.io>"]
edition = "2018"
description = "Library of shared types for use by the various CasperLabs execution engine crates."
readme = "README.md"
documentation = "https://docs.rs/casperlabs-engine-shared"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/CasperLabs/tree/master/execution-engine/engine-shared"
license-file = "../../LICENSE"

[dependencies]
base16 = "0.2.1"
blake2 = "0.8.1"
chrono = "0.4.10"
engine-wasm-prep = { version = "0.4.1", path = "../engine-wasm-prep", package = "casperlabs-engine-wasm-prep" }
hostname = "0.3.0"
lazy_static = "1.4.0"
libc = "0.2.66"
log = { version = "0.4.8", features = ["std", "serde", "kv_unstable"] }
num = { version = "0.2.0", default-features = false }
parity-wasm = "0.41.0"
proptest = "0.9.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
types = { version = "0.4.1", path = "../types", package = "casperlabs-types", features = ["std", "gens"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
wabt = "0.9.2"

[[test]]
name = "trace-level-metrics-disabled"
path = "tests/logging/trace_level_metrics_disabled.rs"

[[test]]
name = "debug-level-metrics-enabled"
path = "tests/logging/debug_level_metrics_enabled.rs"

[[test]]
name = "info-level-metrics-disabled"
path = "tests/logging/info_level_metrics_disabled.rs"

[[test]]
name = "warn-level-metrics-enabled"
path = "tests/logging/warn_level_metrics_enabled.rs"

[[test]]
name = "error-level-metrics-disabled"
path = "tests/logging/error_level_metrics_disabled.rs"

[[test]]
name = "logging-disabled-metrics-enabled"
path = "tests/logging/logging_disabled_metrics_enabled.rs"

[[test]]
name = "logging-disabled-metrics-disabled"
path = "tests/logging/logging_disabled_metrics_disabled.rs"
