[package]
name = "casperlabs-engine-storage"
version = "0.1.0"
authors = ["Michael Birch <birchmd@casperlabs.io>"]
edition = "2018"

[dependencies]
contract = { path = "../contract", features = ["std", "gens"], package = "casperlabs-contract" }
engine-shared = { path = "../engine-shared", package = "casperlabs-engine-shared" }
engine-wasm-prep = { path = "../engine-wasm-prep", package = "casperlabs-engine-wasm-prep" }
failure = "0.1.6"
lmdb = "0.8.0"
parking_lot = "0.10.0"
wasmi = "0.4.2"

[dev-dependencies]
lazy_static = "1"
proptest = "0.9.4"
rand = "0.7.2"
tempfile = "3"
