[package]
name = "casperlabs-engine-storage"
version = "0.5.1"
authors = ["Michael Birch <birchmd@casperlabs.io>"]
edition = "2018"
description = "Storage component of the CasperLabs Wasm execution engine."
readme = "README.md"
documentation = "https://docs.rs/casperlabs-engine-storage"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/CasperLabs/tree/master/execution-engine/engine-storage"
license-file = "../../LICENSE"

[dependencies]
engine-shared = { version = "0.5.1", path = "../engine-shared", package = "casperlabs-engine-shared" }
engine-wasm-prep = { version = "0.4.1", path = "../engine-wasm-prep", package = "casperlabs-engine-wasm-prep" }
failure = "0.1.6"
lmdb = "0.8.0"
parking_lot = "0.10.0"
types = { version = "0.4.1", path = "../types", package = "casperlabs-types", features = ["std", "gens"] }
wasmi = "0.6.2"

[dev-dependencies]
lazy_static = "1"
proptest = "0.9.4"
rand = "0.7.2"
tempfile = "3"
