[package]
name = "casperlabs-engine-test-support"
version = "0.1.0"
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2018"
description = "Library to support testing of Wasm smart contracts for use on the CasperLabs network."
readme = "README.md"
documentation = "https://docs.rs/casperlabs-engine-test-support"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/CasperLabs/tree/master/execution-engine/engine-test-support"

[dependencies]
contract = { version = "0.22.0", path = "../contract", package = "casperlabs-contract" }
engine-core = { version = "0.1.0", path = "../engine-core", package = "casperlabs-engine-core" }
engine-grpc-server = { version = "0.11.0", path = "../engine-grpc-server", package = "casperlabs-engine-grpc-server" }
engine-shared = { version = "0.2.0", path = "../engine-shared", package = "casperlabs-engine-shared" }
engine-storage = { version = "0.1.0", path = "../engine-storage", package = "casperlabs-engine-storage" }
engine-wasm-prep = { version = "0.1.0", path = "../engine-wasm-prep", package = "casperlabs-engine-wasm-prep" }
grpc = "0.6.1"
lazy_static = "1"
lmdb = "0.8.0"
num-traits = "0.2.10"
rand = "0.7.2"
protobuf = "=2.8"
types = { version = "0.1.0", path = "../types", package = "casperlabs-types", features = ["std"] }

[features]
use-as-wasm = []
