[package]
name = "casperlabs-engine-tests"
version = "0.1.0"
authors = ["Ed Hastings <ed@casperlabs.io>, Henry Till <henrytill@gmail.com>"]
edition = "2018"

[dependencies]
base16 = "0.2"
clap = "2"
contract-ffi = { path = "../contract-ffi", package = "casperlabs-contract-ffi" }
crossbeam-channel = "0.3.9"
engine-core = { path = "../engine-core", package = "casperlabs-engine-core" }
engine-grpc-server = { path = "../engine-grpc-server", package = "casperlabs-engine-grpc-server" }
engine-shared = { path = "../engine-shared", package = "casperlabs-engine-shared" }
engine-storage = { path = "../engine-storage", package = "casperlabs-engine-storage" }
engine-wasm-prep = { path = "../engine-wasm-prep", package = "casperlabs-engine-wasm-prep" }
env_logger = "0.7.0"
grpc = "0.6.1"
lazy_static = "1.3.0"
lmdb = "0.8.0"
log = "0.4.8"
num-traits = "0.2.8"
rand = "0.7.2"
protobuf = "2"
tempfile = "3"

[dev-dependencies]
criterion = "0.3"
lmdb = "0.8.0"
protobuf = "2"

[features]
default = []
use_as_wasm = []

[lib]
bench = false

[[bench]]
name = "transfer_bench"
harness = false

[[bin]]
name = "state-initializer"
path = "src/profiling/state_initializer.rs"
test = false
bench = false

[[bin]]
name = "simple-transfer"
path = "src/profiling/simple_transfer.rs"
test = false
bench = false

[[bin]]
name = "concurrent-executor"
path = "src/profiling/concurrent_executor.rs"
test = false
bench = false
