[package]
name = "casperlabs-engine-tests"
version = "0.1.0"
authors = ["Ed Hastings <ed@casperlabs.io>, Henry Till <henrytill@gmail.com>"]
edition = "2018"

[dependencies]
base16 = "0.2.1"
clap = "2"
contract = { path = "../contract",  package = "casperlabs-contract" }
crossbeam-channel = "0.4.0"
engine-core = { path = "../engine-core", package = "casperlabs-engine-core" }
engine-grpc-server = { path = "../engine-grpc-server", package = "casperlabs-engine-grpc-server" }
engine-shared = { path = "../engine-shared", package = "casperlabs-engine-shared" }
engine-test-support = { path = "../engine-test-support", package = "casperlabs-engine-test-support" }
env_logger = "0.7.1"
grpc = "0.6.1"
log = "0.4.8"
rand = "0.7.3"
serde_json = "1"
types = { path = "../types", package = "casperlabs-types", features = ["std"] }

[dev-dependencies]
criterion = "0.3.0"
engine-storage = { path = "../engine-storage", package = "casperlabs-engine-storage" }
engine-wasm-prep = { path = "../engine-wasm-prep", package = "casperlabs-engine-wasm-prep" }
lazy_static = "1"
num-traits = "0.2.10"
serde_json = "1"
tempfile = "3"
wabt = "0.9.2"
assert_matches = "1.3.0"

[features]
default = ["contract/std", "contract/test-support", "engine-core/test-support", "engine-test-support/test-support"]
enable-bonding = ["engine-test-support/enable-bonding"]
use-as-wasm = ["engine-test-support/use-as-wasm"]
use-system-contracts = ["engine-test-support/use-system-contracts"]

[lib]
bench = false

[[bench]]
name = "transfer_bench"
harness = false

[[bin]]
name = "state-initializer"
path = "src/profiling/state_initializer.rs"
test = false
bench = false

[[bin]]
name = "simple-transfer"
path = "src/profiling/simple_transfer.rs"
test = false
bench = false

[[bin]]
name = "concurrent-executor"
path = "src/profiling/concurrent_executor.rs"
test = false
bench = false

[[bin]]
name = "host-function-metrics"
path = "src/profiling/host_function_metrics.rs"
test = false
bench = false

[[test]]
name = "metrics"
path = "src/logging/metrics.rs"
