[package]
name = "casperlabs-engine-wasm-prep"
version = "0.4.1"
authors = ["Michael Birch <birchmd@casperlabs.io>", "Mateusz Górski <gorski.mateusz@protonmail.ch>"]
edition = "2018"
description = "Preprocessor of Wasm modules for use as smart contracts on the CasperLabs network."
readme = "README.md"
documentation = "https://docs.rs/casperlabs-engine-wasm-prep"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/CasperLabs/tree/master/execution-engine/engine-wasm-prep"
license-file = "../../LICENSE"

[dependencies]
parity-wasm = "0.41.0"
proptest = "0.9.4"
pwasm-utils = "0.12.0"
types = { version = "0.4.1", path = "../types", package = "casperlabs-types", features = ["std"] }
